--- a/Tutorial_25/Base.lproj/Main.storyboard
+++ b/Tutorial_25/Base.lproj/Main.storyboard
@@ -1,25 +1,137 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HmN-bg-jxM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--To do items-->
+        <scene sceneID="F5W-gu-GJJ">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                <tableViewController id="0ug-2t-BJB" customClass="ToDoListViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rTN-Oi-l7q">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="57B-FV-92c">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="57B-FV-92c" id="i1d-wO-pCO">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0ug-2t-BJB" id="Tld-Pq-wxQ"/>
+                            <outlet property="delegate" destination="0ug-2t-BJB" id="ePH-fR-klG"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="To do items" id="cfi-g2-YQo">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="d60-X9-v57">
+                            <connections>
+                                <segue destination="nYF-K5-yoy" kind="modal" id="fBb-AX-SFY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZZ2-q0-PGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2100" y="-495"/>
+        </scene>
+        <!--Add To Do View Controller-->
+        <scene sceneID="8bS-9A-orW">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ofM-js-xmv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="nYF-K5-yoy" customClass="AddToDoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1SV-sl-UOH"/>
+                        <viewControllerLayoutGuide type="bottom" id="aVu-yV-qgn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wJ9-hZ-zQE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Auw-AT-lbJ">
+                                <rect key="frame" x="176" y="61" width="127" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="127" id="jOZ-sZ-5YG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" verticalHuggingPriority="253" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="0bq-cV-LDU">
+                                <rect key="frame" x="0.0" y="246" width="600" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="454639831.489268">
+                                    <!--2015-05-30 00:50:31 +0000-->
+                                </date>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To-do item:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Jf-Bz-YS7">
+                                <rect key="frame" x="44" y="70" width="96" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Remind me at:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBB-dX-crs">
+                                <rect key="frame" x="44" y="202" width="121" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SWF-DY-ULZ">
+                                <rect key="frame" x="0.0" y="9" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="yLP-8b-2kg">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ITI-4A-nFO"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Save" id="UOu-KR-Yds"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="0bq-cV-LDU" secondAttribute="centerY" constant="-26.5" id="2hK-DR-sRu"/>
+                            <constraint firstItem="Auw-AT-lbJ" firstAttribute="leading" secondItem="wJ9-hZ-zQE" secondAttribute="leading" constant="175" id="7LT-Jn-ugJ"/>
+                            <constraint firstAttribute="trailing" secondItem="0bq-cV-LDU" secondAttribute="trailing" id="BCu-TO-yas"/>
+                            <constraint firstItem="Auw-AT-lbJ" firstAttribute="top" secondItem="SWF-DY-ULZ" secondAttribute="bottom" constant="8" id="BxY-RJ-apf"/>
+                            <constraint firstItem="0bq-cV-LDU" firstAttribute="leading" secondItem="wJ9-hZ-zQE" secondAttribute="leading" id="I52-DB-kmz"/>
+                            <constraint firstItem="SWF-DY-ULZ" firstAttribute="top" secondItem="wJ9-hZ-zQE" secondAttribute="top" constant="9" id="Ji6-Vx-s5E"/>
+                            <constraint firstItem="aVu-yV-qgn" firstAttribute="top" secondItem="0bq-cV-LDU" secondAttribute="bottom" constant="148" id="Ndl-zn-mkB"/>
+                            <constraint firstItem="0bq-cV-LDU" firstAttribute="trailing" secondItem="SWF-DY-ULZ" secondAttribute="trailing" id="ZiM-4z-9CP"/>
+                            <constraint firstItem="Auw-AT-lbJ" firstAttribute="leading" secondItem="wJ9-hZ-zQE" secondAttribute="leading" constant="176" id="gCM-ON-7Ck"/>
+                            <constraint firstItem="0bq-cV-LDU" firstAttribute="leading" secondItem="SWF-DY-ULZ" secondAttribute="leading" id="pua-8Q-7WL"/>
+                            <constraint firstItem="aVu-yV-qgn" firstAttribute="top" secondItem="0bq-cV-LDU" secondAttribute="bottom" constant="146" id="wxE-Rh-NIZ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7LT-Jn-ugJ"/>
+                                <exclude reference="2hK-DR-sRu"/>
+                                <exclude reference="wxE-Rh-NIZ"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="dZC-EW-DJE"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="2900" y="-495"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZJe-JA-IPY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HmN-bg-jxM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sOG-uA-WGx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0ug-2t-BJB" kind="relationship" relationship="rootViewController" id="eDS-hD-waL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HXW-hP-axQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1288" y="-495"/>
         </scene>
     </scenes>
 </document>
